Updated with CSS
Added some CSS. Still needs a lot of work to be 1:1.

--- a/index.html
+++ b/index.html
@@ -10,32 +10,31 @@
 
 <body>
 
-    <section>
-        <h1> Hero </h1>
+    <section class="dark hero grid">
+        <div class="content ">
         <h1> This website is awesome. </h1>
         <h2> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla minima tenetur sapiente repudiandae natus,
             est alias optio?</h2>
-        <button> Sign Up </button>
+        <button> Sign Up </button></div>
+        <img src="https://cdn.statically.io/gh/TheOdinProject/curriculum/81a5d553f4073e593d23a6ab00d50eef8620796d/foundations/html_css/project/imgs/02.png">
     </section>
 
     <section>
-        <h1> Grid </h1>
         <h1> Some Random Information </h1>
-        <div class="cards">
-            <div class="card">A </div>
-            <div class="card">B </div>
-            <div class="card">C </div>
-            <div class="card">D </div>
+        <div class="cards grid">
+            <div class="card">A <img src="https://images.unsplash.com/photo-1699268066886-f121a2148610?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image for A"></div>
+            <div class="card">B <img src="https://images.unsplash.com/photo-1719344870842-d1d46896c9fa?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image for B"> </div>
+            <div class="card">C <img src="https://images.unsplash.com/photo-1719550371336-7bb64b5cacfa?q=80&w=1780&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image for C"></div>
+            <div class="card">D <img src="https://images.unsplash.com/photo-1719550371336-7bb64b5cacfa?q=80&w=1780&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image for D"></div>
         </div>
     </section>
-    <section>
+    <section class="quote">
         <h1> Testimonial </h1>
         <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
         <p>Thor, God of Thunder</p>
     </section>
-    <section>
-        <h1>CTA</h1>
-        <div class="cta">
+    <section class="padded">
+        <div class="cta grid">
             <div class="content">
                 <h2> This is a call to action. </h2>
                 <h3>This is helping text to sell this thing.</h3>
