--- a/index.html
+++ b/index.html
@@ -9,30 +9,39 @@
 </head>
 
 <body>
-
-    <section class="dark hero grid">
+    <div class="wrapper dark">
+    <header>
+        <svg fill="none" height="48" viewBox="0 0 188 48" width="188" xmlns="http://www.w3.org/2000/svg"><g fill="#fff"><path d="m24.9706 7.03309c-3.1242-3.1242-8.1896-3.1242-11.3137 0l-11.31375 11.31371c-3.124199 3.1242-3.124199 8.1895 0 11.3137l11.31375 11.3137c3.1241 3.1242 8.1895 3.1242 11.3137 0l5.3982-5.3983c-4.4939-1.7337-7.682-6.0944-7.682-11.1997 0-5.3087 3.4472-9.8123 8.2254-11.3943-.0935-.0982-.1884-.1955-.2848-.292z"/><path d="m30.3691 35.5798c1.3398.5168 2.7955.8001 4.3174.8001 6.6274 0 12-5.3726 12-12s-5.3726-12-12-12c-1.3185 0-2.5873.2126-3.774.6055 5.9623 6.2681 5.8675 16.1836-.2846 22.3356z" opacity=".7"/><path d="m69.607 33-1.458-4.158h-7.533l-1.485 4.158h-4.131l7.29-19.386h4.482l7.236 19.386zm-5.184-14.904-2.646 7.479h5.238z"/><path d="m78.7457 33h-3.78v-19.386h3.78z"/><path d="m95.4222 25.791c0 4.266-2.511 7.479-6.399 7.479-1.701 0-3.159-.729-4.239-2.133v7.074h-3.753v-19.629h3.456v2.106c1.107-1.539 2.7-2.376 4.536-2.376 3.888 0 6.399 3.24 6.399 7.479zm-3.861 0c0-2.7-1.539-4.158-3.375-4.158s-3.375 1.431-3.375 4.158 1.539 4.131 3.375 4.131 3.375-1.377 3.375-4.131z"/><path d="m100.5 25.143v7.857h-3.7529v-19.386h3.7529v6.858c.999-1.323 2.241-2.16 4.131-2.16 2.889 0 4.887 1.89 4.887 5.373v9.315h-3.726v-8.046c0-2.133-.837-3.321-2.538-3.321-1.485 0-2.754 1.188-2.754 3.51z"/><path d="m120.258 33v-1.782c-.945 1.35-2.376 2.052-4.347 2.052-2.997 0-4.995-1.755-4.995-4.455 0-2.808 2.268-4.32 6.48-4.32.81 0 1.512.054 2.403.162v-.864c0-1.62-.918-2.565-2.484-2.565-1.62 0-2.592.945-2.727 2.565h-3.375c.216-3.321 2.619-5.481 6.102-5.481 3.78 0 5.994 2.079 5.994 5.616v9.072zm-5.805-4.293c0 1.215.864 1.971 2.268 1.971 1.917 0 3.078-1.053 3.078-2.727v-1.026c-.891-.135-1.512-.189-2.16-.189-2.133 0-3.186.675-3.186 1.971z"/><path d="m139.157 33-3.618-13.554-3.618 13.554h-4.158l-4.968-19.386h3.996l3.132 13.149 3.564-13.149h4.185l3.456 13.203 3.159-13.203h4.023l-4.995 19.386z"/><path d="m156.726 33v-1.782c-.945 1.35-2.376 2.052-4.347 2.052-2.997 0-4.995-1.755-4.995-4.455 0-2.808 2.268-4.32 6.48-4.32.81 0 1.512.054 2.403.162v-.864c0-1.62-.918-2.565-2.484-2.565-1.62 0-2.592.945-2.727 2.565h-3.375c.216-3.321 2.619-5.481 6.102-5.481 3.78 0 5.994 2.079 5.994 5.616v9.072zm-5.805-4.293c0 1.215.864 1.971 2.268 1.971 1.917 0 3.078-1.053 3.078-2.727v-1.026c-.891-.135-1.512-.189-2.16-.189-2.133 0-3.186.675-3.186 1.971z"/><path d="m174.417 18.582-5.292 14.418h-4.104l-5.319-14.418h4.05l3.429 10.152 3.456-10.152z"/><path d="m180.747 33.243c-4.32 0-7.209-2.997-7.209-7.506 0-4.293 2.997-7.425 7.155-7.425 4.563 0 7.587 3.699 6.912 8.397h-10.233c.243 2.349 1.377 3.645 3.294 3.645 1.647 0 2.754-.81 3.186-2.241h3.726c-.81 3.267-3.321 5.13-6.831 5.13zm-.135-12.177c-1.755 0-2.862 1.134-3.186 3.267h6.21c-.108-1.998-1.242-3.267-3.024-3.267z"/></g></svg>
+        <ul class="links">
+            <li>Link 1</li>
+            <li>Link 2</li>
+            <li>Link 3</li>
+            <li>Link 4</li>
+        </ul>
+    </header>
+    <section class="hero grid">
         <div class="content ">
         <h1> This website is awesome. </h1>
-        <h2> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla minima tenetur sapiente repudiandae natus,
+        <h2> Lorem ipsum dolor sit, amet consectetur adipisicing elit. <wbr> Nulla minima tenetur sapiente repudiandae natus,
             est alias optio?</h2>
         <button> Sign Up </button></div>
-        <img src="https://cdn.statically.io/gh/TheOdinProject/curriculum/81a5d553f4073e593d23a6ab00d50eef8620796d/foundations/html_css/project/imgs/02.png">
+        <img src="https://cdn.prod.website-files.com/6365d860c7b7a7191055eb8a/66423262348691baacd52fb8_65b4a525c7bf7e4f2e12fa04_Portfolio%2520mockups.webp">
     </section>
-
-    <section>
+</div>
+    <section class="cards">
         <h1> Some Random Information </h1>
-        <div class="cards grid">
+        <div class="grid">
             <div class="card">A <img src="https://images.unsplash.com/photo-1699268066886-f121a2148610?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image for A"></div>
             <div class="card">B <img src="https://images.unsplash.com/photo-1719344870842-d1d46896c9fa?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image for B"> </div>
             <div class="card">C <img src="https://images.unsplash.com/photo-1719550371336-7bb64b5cacfa?q=80&w=1780&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image for C"></div>
             <div class="card">D <img src="https://images.unsplash.com/photo-1719550371336-7bb64b5cacfa?q=80&w=1780&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image for D"></div>
         </div>
     </section>
+    <div class="wrapper quote">
     <section class="quote">
-        <h1> Testimonial </h1>
         <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
         <p>Thor, God of Thunder</p>
-    </section>
+    </section></div>
     <section class="padded">
         <div class="cta grid">
             <div class="content">
@@ -42,9 +51,9 @@
             <button> Sign Up </button>
         </div>
     </section>
-    <section>
-        <h3>Copyright (C) The Odin Project 2024</h3>
-    </section>
+    <footer class="wrapper dark">
+        <h3>Copyright (C) The Odin Project 2024 - Hero Image and logo from UntitledUI </h3>
+    </footer>
 
 </body>
 
